2022-12-21  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_CURSES_TERMCAP: quiet an unused-variable warning

	* AcSplit/CF_TERMCAP_LIBS: quiet an implicit-function warning

	* AcSplit/CF_PROG_YACC:
	reduce prototype-related warnings by prototyping yylex/yyerror with the most
	common signature used in byacc/bison, which works with heirloom yacc.

	* AcSplit/CF_TIOCGWINSZ, AcSplit/CF_SIG_CONST: use prototype for main()

	* AcSplit/CF_FUNC_SYSTEM:
	fixes for implicit function (adapted from patch by Florian Weimer)

	* AcSplit/CF_FUNC_SYSTEM: use prototype for main()

	* AcSplit/CF_FUNC_FORK:
	fixes for implicit function (adapted from patch by Florian Weimer)

	* AcSplit/CF_FUNC_FORK: use $ac_includes_default for consistency

	* AcSplit/CF_COREFILE:
	fixes for implicit function (adapted from patch by Florian Weimer)

	* AcSplit/CF_COREFILE: use $ac_includes_default, for consistency

	* AcSplit/CF_COREFILE, AcSplit/CF_FUNC_FORK, AcSplit/CF_FUNC_SYSTEM:
	compiler-warning fixes from Florian Weimer forwarded by Urs

2022-12-06  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_FCNTL_VS_IOCTL:
	include <sys/ioctl.h>, for systems which may define FIONREAD there (Redhat #2151353)

2022-12-04  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF__INET_HEAD:
	use $ac_includes_default to quiet implicit-function warnings with MinGW

	* AcSplit/CF_BUILD_CC:
	workaround for Lynx, which sets BUILD_CPPFLAGS to "#", commenting out part
	of a makefile assignment.

2022-12-02  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_CURSES_HEADER, AcSplit/CF_CURSES_LIBS:
	drop tgoto() from the sample code used for checking if a given header declares
	curses functions, since the prototype for it in X/Open lives in term.h (tested
	later in configure scripts, to resolve <term.h> vs <ncurses/term.h>, etc).

	* AcSplit/CF_TERMCAP_LIBS:
	make the try-link checks less likely to generate compiler warnings by